detect platform correctly